# Failure-Aware-Dual-Memory

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_failure_aware_dual_memory.sh
failure_aware_dual_memory/component/: __init__.py
failure_aware_dual_memory/component/evaluator/: evaluator.py
failure_aware_dual_memory/component/memory/: __init__.py  composition_encoder.py  data_models.py  memory_store.py
failure_aware_dual_memory/component/proposer/: __init__.py  llm_proposer.py  memory_proposer.py  model_client.py  proposer.py  reason_generator.py
failure_aware_dual_memory/component/proposer/util/: initialize.py  prompt.py
failure_aware_dual_memory/component/validator/: __init__.py  composition_validator.py  smact_checker.py
failure_aware_dual_memory/diffusion/model/decoder/: cspnet.py
failure_aware_dual_memory/diffusion/pretrain/: __init__.py  util.py
failure_aware_dual_memory/diffusion/pretrain/diffcsp/: mp60.yml
failure_aware_dual_memory/diffusion/util/: eval.py
failure_aware_dual_memory/evaluation/models/util/: data.py
failure_aware_dual_memory/evaluation/pretrain/: util.py
failure_aware_dual_memory/evaluation/pretrain/comformer/: mp60.yml
failure_aware_dual_memory/util/: legacy_imports.py
scripts/: build_memory_subset.py  calc_vun_metrics.py  initialize_memory_from_mp20.py  merge_memory_stores.py  pipeline_workflow.py  run_pipeline.py  setup_environment.sh  subset_memory_config.example.yaml  test_memory_system.py
